# Mimetix

./: .bazelignore  .bazelrc  .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .pylintrc  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  OWNERS  README.md  WORKSPACE  pyproject.toml
docs/api/: README.md
docs/architecture/: README.md
docs/development/: README.md
ingestion/scraper_fleet/: .env.example  README.md  airflow_dag_ingestion.py  alertmanager_slack.yml  grafana_dashboard_ingestion.json  prefect_flow_ingestion.py
ingestion/scraper_fleet/.github/workflows/: ci.yml
ingestion/scraper_fleet/src/: config.py  main.py
ingestion/scraper_fleet/src/application/: scraper_service.py
ingestion/scraper_fleet/src/common/: constants.py
ingestion/scraper_fleet/src/domain/: abstract_repository.py  abstract_scraper.py  reel.py
ingestion/scraper_fleet/src/infrastructure/: dwh_repository.py  gcs_repository.py  playwright_scraper.py  s3_repository.py  scrapy_scraper.py  sqlite_repository.py
ingestion/scraper_fleet/tests/: test_domain.py  test_playwright_scraper.py  test_s3_repository.py  test_scraper_service.py
roadmap/: PHASES.md  phase0_foundation.md  phase1_features.md  phase2_modeling.md  phase3_product.md  phase4_generative.md  plan.md  roadmap.md
